Fix Bug 280026 - Incorrect size of Base64 encoded attachment

Apply patch from thomas.kear@gmail.com

FIXED-IN: 4.8.1
BUG: 280026
CCMAIL: thomas.kear@gmail.com
(cherry picked from commit d6eac430bd23c0552b3b768305f21348c457d088)